# behavior

./: .gitignore  CMakeLists.txt  README.md  rename_files.ps1
demo/: CMakeLists.txt  analysis_dialog.cpp  analysis_dialog.h  chart_widgets.cpp  chart_widgets.h  dialog_tab.cpp  dialog_tab.h  distance_tab.cpp  distance_tab.h  heatmap_tab.cpp  heatmap_tab.h  input_tab.cpp  input_tab.h  main.cpp  mainwindow.cpp  mainwindow.h  modules_tab.cpp  modules_tab.h  operations_tab.cpp  operations_tab.h  settings_dialog.cpp  settings_dialog.h  time_tab.cpp  time_tab.h
demo/date_picker/: calendar_picker.cpp  calendar_picker.h  date_field.cpp  date_field.h  dropdown_popup.cpp  dropdown_popup.h
docs/: input_method_refactor.md  requirements_srs_v2.md  testing_guide.md
src/: CMakeLists.txt
src/analyzer/: AnalyzerBase.h  AnalyzerRegistry.cpp  AnalyzerRegistry.h  BehaviorAnalyzer.cpp  BehaviorAnalyzer.h  DialogAnalyzer.cpp  DialogAnalyzer.h  FrequencyAnalyzer.cpp  FrequencyAnalyzer.h  HeatmapAnalyzer.cpp  HeatmapAnalyzer.h  InputAnalyzer.cpp  InputAnalyzer.h  ModuleAnalyzer.cpp  ModuleAnalyzer.h  TimeAnalyzer.cpp  TimeAnalyzer.h  analyzer_base.h  analyzer_registry.cpp  analyzer_registry.h  behavior_analyzer.cpp  behavior_analyzer.h  dialog_analyzer.cpp  dialog_analyzer.h  frequency_analyzer.cpp  frequency_analyzer.h  heatmap_analyzer.cpp  heatmap_analyzer.h  input_analyzer.cpp  input_analyzer.h  module_analyzer.cpp  module_analyzer.h  time_analyzer.cpp  time_analyzer.h
src/collector/: ControlInspector.cpp  DialogTracker.cpp  DialogTracker.h  EventFilter.cpp  EventFilter.h  EventProcessor.cpp  EventProcessor.h  ShortcutResolver.cpp  ShortcutResolver.h  control_inspector.cpp  control_inspector.h  dialog_tracker.cpp  dialog_tracker.h  event_filter.cpp  event_filter.h  event_processor.cpp  event_processor.h  knob_resolver.cpp  knob_resolver.h  shortcut_resolver.cpp
src/core/: BehaviorAnalytics.cpp  BehaviorAnalytics.h  Config.cpp  Config.h  Session.cpp  Session.h  Types.h  behavior_analytics.cpp  behavior_analytics.h  config.cpp  config.h  session.cpp  session.h  types.h
src/storage/: AggregationScheduler.cpp  AggregationScheduler.h  Aggregator.cpp  Aggregator.h  BatchWriter.cpp  BatchWriter.h  Database.cpp  Database.h  Migrator.cpp  Migrator.h  OperationQueue.cpp  OperationQueue.h  aggregation_scheduler.cpp  aggregation_scheduler.h  aggregator.cpp  aggregator.h  batch_writer.cpp  batch_writer.h  cleaner.cpp  cleaner.h  database.cpp  database.h  migrator.h  operation_queue.cpp  operation_queue.h
tests/: CMakeLists.txt  README.md  TestAggPrecision.cpp  TestAggregator.cpp  TestAnalyzerOutput.cpp  TestAnalyzers.cpp  TestBatchWriter.cpp  TestCalendarPicker.cpp  TestCoordBoundary.cpp  TestCore.cpp  TestDatabase.cpp  TestDistanceCalc.cpp  TestEventCollection.cpp  TestEventProcessor.cpp  TestKnobResolver.cpp  TestMigrator.cpp  TestOperationQueue.cpp  TestQueryFilter.cpp  TestTimezone.cpp  check_agg.cpp  check_dialog.cpp  check_op_stats.cpp  fill_data.cpp  query_0701.cpp  query_dialog_today.cpp  query_op_detail.cpp  seed_7days.cpp  stress_test.cpp  test_cleaner.cpp  test_main.cpp
